add typescript and remove redundant nodes

--- a/atlas/Dockerfile-dev
+++ b/atlas/Dockerfile-dev
@@ -5,8 +5,8 @@ WORKDIR /usr/src
 COPY package*.json ./
 
 RUN npm install
+
 COPY . .
-RUN npm run build
 
 EXPOSE 8000
-RUN npm run production
+CMD npm start
