--- a/atlas/package.json
+++ b/atlas/package.json
@@ -4,13 +4,27 @@
   "description": "Cobi Atlas",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon src/index.ts",
+    "build": "tsc",
+    "production": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "mongoose": "^5.1.6",
+    "body-parser": "^1.18.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.0.21",
+    "@types/mongoose": "^5.0.17",
+    "@types/redis": "^2.8.6",
+    "nodemon": "^1.17.5",
+    "ts-node": "^6.1.1",
+    "typescript": "^2.9.2"
   }
 }
