--- a/atlas/package.json
+++ b/atlas/package.json
@@ -7,24 +7,32 @@
     "start": "nodemon src/index.ts",
     "build": "tsc",
     "production": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "test": "jest --forceExit --coverage --verbose"
   },
-  "author": "",
+  "author": "Khoa Bui <buidangkhoa2602@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "redis": "^2.8.0",
+    "inversify": "^4.13.0",
+    "inversify-express-utils": "^6.1.0",
     "mongoose": "^5.1.6",
-    "body-parser": "^1.18.3"
+    "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.1.1",
     "@types/mongodb": "^3.0.21",
     "@types/mongoose": "^5.0.17",
     "@types/redis": "^2.8.6",
+    "jest": "^23.1.0",
     "nodemon": "^1.17.5",
+    "ts-jest": "^22.4.6",
     "ts-node": "^6.1.1",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
 }
