--- a/atlas/tsconfig.json
+++ b/atlas/tsconfig.json
@@ -8,12 +8,15 @@
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "types": ["reflect-metadata"],
         "paths": {
             "*": [
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
       "src/**/*.ts"
