--- a/atlas/package.json
+++ b/atlas/package.json
@@ -13,7 +13,9 @@
   "author": "Khoa Bui <buidangkhoa2602@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.4",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^6.1.0",
